fix(exception-handler): adiciona tratamento para NoResourceFoundException
Implementa um handler específico que captura NoResourceFoundException,
retornando resposta 404 com mensagem adequada, aprimorando a gestão
de exceções de recurso não encontrado na API.